buildscript {
    repositories {
        // Remove jcenter() as it's deprecated and shut down
        maven { url = 'https://files.minecraftforge.net/maven' }
        mavenCentral() // Always a good fallback
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
    }
}

apply plugin: 'net.minecraftforge.gradle.forge'

version = '1.0'
group = 'com.github.ozmeyham.imsbridge'
archivesBaseName = 'ImsBridgeMod'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

minecraft {
    version = '1.8.9-11.15.1.2318-1.8.9'
    runDir = 'run'
    mappings = 'snapshot_20150916'
    useDepAts = true
}

repositories {
    // Remove jcenter() as it's deprecated and shut down
    mavenCentral()
    // If you have any custom dependencies from other repos, add them here
    // maven { url "https://example.com/maven/" }
}

dependencies {
    // Add any external libraries your mod uses here.
    // Replace or add your specific WebSocket client library here.
    // Example for a common JSON library (if your mod processes JSON, like from WebSocket)
    // compile 'com.google.code.gson:gson:2.8.6' // Note: Minecraft 1.8.9 already has Gson 2.2.4
    // If you're using a specific WebSocket client library, you would add it like:
    // compile 'org.java-websocket:Java-WebSocket:1.5.1' // Example, check latest version
    // If you put JARs directly in a 'libs' folder, use:
    // compile fileTree(dir: 'libs', include: ['*.jar'])
}

clean {
    delete rootProject.file('build')
    delete rootProject.file('.gradle')
    delete rootProject.file('run')
}